@@ -1,5 +1,3 @@
-#!/usr/bin/perl
-
 use strict;
 use warnings;
 use Test::More;
@@ -7,7 +5,6 @@ use Class::Inspector ();
 
 unshift(@INC, './t/lib');
 use lib 't/lib';
-plan tests => 5;
 
 use DBICTest;
 
@@ -20,3 +17,5 @@ is(DBICTest::Schema->source('Artist')->resultset_class, 'DBICNSTest::ResultSet::
 my $schema = DBICTest->init_schema;
 my $resultset = $schema->resultset('Artist')->search;
 isa_ok($resultset, 'DBICNSTest::ResultSet::A', 'resultset is custom class');
+
+done_testing;
